--- a/card輪播.html
+++ b/card輪播.html
@@ -16,29 +16,32 @@
       margin: 0;
       background: #f5f5f5;
     }
-    .carousel-wrapper {
-      display: flex;
-      align-items: center;
-    }
-    .carousel-container {
-      width: 960px;
-      overflow: hidden;
-    }
-    .carousel-track {
-      display: flex;
-      transition: transform 0.3s ease-in-out;
-    }
-    .card {
-      width: 300px;
-      height: 300px;
-      background-color: #fff;
-      margin-right: 30px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      border-radius: 10px;
-      padding: 1rem;
-      box-sizing: border-box;
-      flex-shrink: 0;
-    }
+ .carousel-container {
+  width: 100%;
+  max-width: 960px;
+  overflow-x: auto;
+}
+
+.carousel-track {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.card {
+  width: 260px;
+  flex: 0 0 auto;
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 80%;
+  }
+
+  button {
+    display: none;
+  }
+}
     button {
       padding: 1rem;
       font-size: 1.2rem;
