--- a/card輪播.html
+++ b/card輪播.html
@@ -16,26 +16,39 @@
       margin: 0;
       background: #f5f5f5;
     }
-  .carousel-container {
-      width: 960px;
-      overflow: hidden;
-    }
-    .carousel-track {
-      display: flex;
-      transition: transform 0.3s ease-in-out;
-    }
-    .card {
-      width: 300px;
-      height: 300px;
-      background-color: #fff;
-      margin-right: 30px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      border-radius: 10px;
-      padding: 1rem;
-      box-sizing: border-box;
-      flex-shrink: 0;
-    }
+@media (min-width: 601px) {
+  .carousel-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row; /* 重點：橫向排列 */
+    gap: 10px;
+  }
 
+  #prevBtn,
+  #nextBtn {
+    position: static; /* 或設為 absolute 看你需求 */
+    width: 40px;
+    height: 40px;
+  }
+
+  .carousel-container {
+    flex: 1;
+    max-width: 1000px;
+    overflow: hidden;
+  }
+
+  .carousel-track {
+    display: flex;
+    transition: transform 0.3s ease;
+    gap: 20px;
+  }
+
+  .card {
+    flex: 0 0 auto;
+    width: 300px;
+  }
+}
 
     button {
       padding: 1rem;
