--- a/card輪播.html
+++ b/card輪播.html
@@ -36,15 +36,24 @@
       box-sizing: border-box;
       flex-shrink: 0;
     }
-    button {
-      padding: 1rem;
-      font-size: 1.2rem;
-      border: none;
-      background-color: #007bff;
-      color: white;
-      border-radius: 10px;
-      cursor: pointer;
-    }
+   button {
+  width: 40px;
+  height: 40px;
+  font-size: 24px; /* 調整 icon 大小 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  border-radius: 50%;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+
     button:disabled {
       background-color: #ccc;
       cursor: not-allowed;
@@ -101,12 +110,14 @@
     gap: 10px;
   }
 
-  #prevBtn,
-  #nextBtn {
-    position: static; /* 或設為 absolute 看你需求 */
-    width: 40px;
-    height: 40px;
-  }
+ 
+#prevBtn {
+  left: 10px;
+}
+
+#nextBtn {
+  right: 10px;
+}
 
   .carousel-container {
     flex: 1;
