--- a/card輪播.html
+++ b/card輪播.html
@@ -79,13 +79,17 @@
   }
 
   .carousel-track {
-    gap: 0;
+    display: flex;
+    gap: 1rem;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
   }
 
- .carousel-track > * {
-  min-width: 100%;
-  margin-right: 0;
-}
+  .carousel-track > * {
+    flex: 0 0 100%;
+    scroll-snap-align: center;
+  }
   .carousel-wrapper {
     width: 100%;
     max-width: 100%;
