--- a/card輪播.html
+++ b/card輪播.html
@@ -79,17 +79,13 @@
   }
 
   .carousel-track {
-    display: flex;
-    gap: 1rem;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
+    gap: 0;
   }
 
-  .carousel-track > * {
-    flex: 0 0 100%;
-    scroll-snap-align: center;
-  }
+ .carousel-track > * {
+  min-width: 100%;
+  margin-right: 0;
+}
   .carousel-wrapper {
     width: 100%;
     max-width: 100%;
