--- a/card輪播.html
+++ b/card輪播.html
@@ -117,12 +117,11 @@
   right: 40px;
 }
 
-  .carousel-container {
-    flex: 1;
-    max-width: 1000px;
-    overflow: hidden;
-  }
-
+.carousel-container {
+  width: 960px;
+  max-width: 960px;
+  overflow: hidden;
+}
   .carousel-track {
     display: flex;
     transition: transform 0.3s ease;
