--- a/card輪播.html
+++ b/card輪播.html
@@ -65,6 +65,29 @@
 }
 	  a{text-decoration: none;
 	    color: #000000;}
+
+@media (max-width: 1024px) {
+  .carousel-container {
+    width: 660px; /* 適合顯示兩張卡片 */
+  }
+  .card {
+    width: 300px;
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .carousel-container {
+    width: 330px; /* 適合顯示一張卡片 */
+  }
+  .card {
+    width: 300px;
+    margin-right: 30px;
+  }
+}
+
+
+	  
   </style>
 	<body>
 		<!-- 公告標題 -->
