--- a/card輪播.html
+++ b/card輪播.html
@@ -47,6 +47,7 @@
       color: white;
       border-radius: 10px;
       cursor: pointer;
+      z-index: 10;
     }
     button:disabled {
       background-color: #ccc;
@@ -78,15 +79,19 @@
 
 @media (max-width: 600px) {
   .carousel-container {
-    width: 330px; /* 適合顯示一張卡片 */
+    width: 300px; /* 適合顯示一張卡片 */
   }
   .card {
-    width: 300px;
+    width: 270px;
     margin-right: 15px;
    margin-left: 15px;
   }
 }
-
+ button {
+    margin: 10px;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+  }
 
 
 	  
