--- a/card輪播.html
+++ b/card輪播.html
@@ -79,12 +79,17 @@
 
 @media (max-width: 600px) {
  .carousel-container {
-    width: 300px; /* 適合顯示一張卡片 */
+    width: 330px; /* 適合顯示一張卡片 */
   }
   .card {
-    width: 270px;
-    margin-right: 15px;
-   margin-left: 15px;
+    width: 300px;
+    margin-right: 10px;
+   margin-left: 10px;
+  }
+	  button {
+    margin: 5px;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
   }
 
 }
