--- a/card輪播.html
+++ b/card輪播.html
@@ -87,7 +87,7 @@
    margin-left: 15px;
   }
     button {
-    margin: 5px;
+    padding: 1rem;
     font-size: 1rem;
     padding: 0.5rem 1rem;
   }
