--- a/card輪播.html
+++ b/card輪播.html
@@ -89,7 +89,9 @@
     button {
     padding: 1rem;
     font-size: 1rem;
-    
+    z-index: 10;
+  position: relative;
+  display: block;
   }
 
 }
