--- a/card輪播.html
+++ b/card輪播.html
@@ -82,9 +82,9 @@
     width: 330px; /* 適合顯示一張卡片 */
   }
   .card {
-    width: 290px;
-    margin-right: 20px;
-   margin-left: 20px;
+    width: 280px;
+    margin-right: 25px;
+   margin-left: 25px;
   }
     button {
     padding: 1rem;
@@ -92,6 +92,7 @@
     z-index: 10;
   position: relative;
   display: block;
+	    margin:0;
   }
 
 }
