--- a/card輪播.html
+++ b/card輪播.html
@@ -14,7 +14,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: #f5f5f5;
+      background: #ffffff;
     }
     .carousel-wrapper {
       display: flex;
@@ -31,7 +31,7 @@
     .card {
       width: 300px;
       height: 300px;
-      background-color: #fff;
+      background-color: #D3D3D3;
       margin-right: 30px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border-radius: 10px;
