--- a/card輪播.html
+++ b/card輪播.html
@@ -31,7 +31,7 @@
     .card {
       width: 300px;
       height: 300px;
-      background-color: #D3D3D3;
+      background-color: #F5F5F5;
       margin-right: 30px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border-radius: 10px;
