--- a/card輪播.html
+++ b/card輪播.html
@@ -31,9 +31,9 @@
     .card {
       width: 300px;
       height: 300px;
-      background-color: #F5F5F5;
+      background-color: #FFFFFF;
       margin-right: 30px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
       border-radius: 10px;
       padding: 1rem;
       box-sizing: border-box;
