--- a/card輪播.html
+++ b/card輪播.html
@@ -14,7 +14,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: #f5f5f5;
+      background: #FFFFFF;
     }
     .carousel-wrapper {
       display: flex;
@@ -33,7 +33,7 @@
       height: 300px;
       background-color: #fff;
       margin-right: 30px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 8px rgba(0,0,0,0.2);
       border-radius: 10px;
       padding: 1rem;
       box-sizing: border-box;
