--- a/card輪播.html
+++ b/card輪播.html
@@ -31,7 +31,7 @@
     .card {
       width: 300px;
       height: 300px;
-      background-color: #fff;
+      background-color: #F0F0F0;
       margin-right: 30px;
       box-shadow: 0 8px 8px rgba(0,0,0,0.2);
       border-radius: 10px;
