--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -72,13 +72,13 @@ a {
 /* ✅ 手機 RWD */
 @media (max-width: 600px) {
   .card {
-    width: 300px;
+    width: 330px;
    
-    margin-right: 30px;
+    margin-right: 0px;
   }
 
   .carousel-container {
-    width:600px;
+    width:100%;
   }
 
   .carousel-track {
