--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -67,8 +67,20 @@ a {
 
 /* ✅ 手機 RWD */
 @media (max-width: 600px) {
+	  .cardbutton {
+    padding: 0.5rem;
+    font-size: 1rem;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+
+
+  .carousel-wrapper {
+    gap: 2px; /* 按鈕與卡片間的距離縮小 */
+  }
   .card {
-    width: 330px;
+    width: 100%;;
    
     margin-right: 0px;
   }
