--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -80,13 +80,13 @@ a {
     gap: 2px; /* 按鈕與卡片間的距離縮小 */
   }
   .card {
-    width: 100%;;
+    width: 300px;
    
     margin-right: 0px;
   }
 
   .carousel-container {
-    width:100%;
+    width:600px;
   }
 
   .carousel-track {
