--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -297,7 +297,7 @@ a {
 /**annousement**/
 .Announcements {
      width: 100%;
-      background-color:#E0E0E0;
+      background-color:#ffffff;
       padding: 40px;
       box-sizing: border-box;
 	
@@ -305,7 +305,7 @@ a {
 	  
   .announcement {
 	  
-      background-color: #ffffff ;
+      background-color:#F0F0F0 ;
       padding: 20px 30px;
       display: flex;
       justify-content: space-between;
