--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -5,12 +5,34 @@
 </head>
   <style>
 .carousel-wrapper {
+  position: relative; /* 讓內部的按鈕絕對定位基準點 */
   display: flex;
-  align-items: center;
   justify-content: center;
-  gap: 0px; /* 卡片與按鈕間距 */
-  flex-wrap: nowrap;
-	
+  align-items: center;
+  width: 100%;
+}
+
+.cardbutton {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background-color:#0080FF; /* 半透明背景 */
+  color: white;
+  border: none;
+  border-radius: 20%;
+  width: 40px;
+  height: 40px;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+#prevBtn {
+  left: 10px;
+}
+
+#nextBtn {
+  right: 10px;
 }
 
 .carousel-container {
@@ -46,15 +68,7 @@
   color: #fff;
 }
 
-.cardbutton {
-  padding: 0.8rem;
-  font-size: 0.8rem;
-  border: none;
-  background-color: #007bff;
-  color: white;
-  border-radius: 10px;
-  cursor: pointer;
-}
+
 
 .cardbutton:disabled {
   background-color: #ccc;
@@ -71,8 +85,8 @@ a {
 	  .cardbutton {
     padding: 0.5rem;
     font-size: 1rem;
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     border-radius: 20%;
   }
 
