--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -209,14 +209,16 @@ a {
     }
 
     .modal-content {
-      background-color: #fff;
-      margin: 15% auto;
-      padding: 20px;
-      border-radius: 8px;
-      width: 80%;
-      max-width: 600px;
-      position: relative;
-      text-align: center;
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* 重點！ */
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
     }
 
     .close {
