--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -208,19 +208,18 @@ a {
       background-color: rgba(0,0,0,0.5);
     }
 
-    .modal-content {
-    position: absolute;
-  top: 50%;
+.modal-content {
+  position: absolute;
+  top: 5%; /* 靠近頂端 */
   left: 50%;
-  transform: translate(-50%, -50%); /* 重點！ */
+  transform: translateX(-50%); /* 水平置中 */
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
   width: 80%;
   max-width: 400px;
   text-align: center;
-    }
-
+}
     .close {
       position: absolute;
       top: 10px;
