--- a/後護系首頁.html
+++ b/後護系首頁.html
@@ -4,8 +4,11 @@
 <title>後護系首頁</title>
 </head>
   <style>
-	  a{decoration:none;}
-
+ a {
+      text-decoration: none;
+      font-weight: bold;
+	color:#000000;
+    }
   /**學習資源**/
 .LearningResources {
   display: flex;
