--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -372,6 +372,22 @@ a {
 		color:#ffffff;
     }	  
 	  
+	  .video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9比例 → 高度/寬度 * 100% */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+	  
 	  
   </style>
 
@@ -706,12 +722,16 @@ function closeModal(modalId) {
     });
   });
 </script>		
-		
-<center>	
-	<iframe width="840" height="473" src="https://www.youtube.com/embed/jTD3RbKdIpY?si=UrEupxygN-UTw-E4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>	
-	</center>		
-		
+<center>
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/jTD3RbKdIpY?si=dpmT-oRuVjFk12Wk" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen>
+    </iframe>
+  </div>
+</center>	
 </body>
 </html>
-
-
