--- a/護理系首頁.html
+++ b/護理系首頁.html
@@ -372,21 +372,19 @@ a {
 		color:#ffffff;
     }	  
 	  
-	  .video-container {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; /* 16:9比例 → 高度/寬度 * 100% */
-  height: 0;
-  overflow: hidden;
-}
-
-.video-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+    .video-row {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr); /* 三等分 */
+      gap: 20px; /* 每塊之間的間距 */
+      max-width: 1200px;
+      margin: auto;
+    }
+    .video-row iframe {
+      width: 100%;
+      aspect-ratio: 16 / 9; /* 保持影片比例 */
+      border-radius: 12px;
+      border: none;
+    }
 	  
 	  
   </style>
@@ -728,16 +726,14 @@ function closeModal(modalId) {
     });
   });
 </script>		
-<center>
+
   <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/jTD3RbKdIpY?si=dpmT-oRuVjFk12Wk" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" 
-            allowfullscreen>
-    </iframe>
+  <div class="video-row">
+    <iframe src="https://www.youtube.com/embed/jTD3RbKdIpY?si=dpmT-oRuVjFk12Wk" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/Vjoqnkq2atY?si=Bk-FpuhRxsbSl4OI" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/-_G8oyy_KWs?si=De1hT0fkL1nrufO9" allowfullscreen></iframe>
   </div>
-</center>	
+  </div>
+	
 </body>
 </html>
