--- a/表單選填.html
+++ b/表單選填.html
@@ -10,8 +10,10 @@ label { display: block; margin-top: 10px; }
 select, input { width: 300px; padding: 5px; margin-top: 5px; }
 .section { margin-bottom: 20px; border: 1px solid #ccc; padding: 10px; }
 button { padding: 10px 20px; margin-top: 10px; }
-#message { margin-top: 10px; color: green; }
-#staffSection { margin-top: 30px; border: 1px solid #aaa; padding: 10px; }
+#message { margin-top: 10px; padding: 10px; border-radius: 5px; }
+.success { color: green; background: #f0fff0; border: 1px solid green; }
+.error { color: red; background: #fff0f0; border: 1px solid red; }
+.info { color: blue; background: #f0f8ff; border: 1px solid blue; }
 </style>
 </head>
 <body>
@@ -19,6 +21,7 @@ button { padding: 10px 20px; margin-top: 10px; }
 <h2>學生醫院志願填寫表單</h2>
 
 <form id="volunteerForm">
+  <!-- 表單內容保持不變 -->
   <div class="section">
     <label>姓名: <input type="text" name="name" required></label>
     <label>學號: <input type="text" name="studentId" required></label>
@@ -48,7 +51,6 @@ button { padding: 10px 20px; margin-top: 10px; }
     <label>志願一單位:
       <select name="unit1" id="unit1" required></select>
     </label>
-
     <label>志願二醫院:
       <select name="hospital2" id="hospital2" required></select>
     </label>
@@ -60,17 +62,10 @@ button { padding: 10px 20px; margin-top: 10px; }
   <button type="submit">送出表單</button>
 </form>
 
-<div id="message"></div>
-
-<!-- 工作人員下載 -->
-<div id="staffSection">
-  <h3>工作人員專用下載</h3>
-  <button id="downloadBtn">下載 Excel (需密碼)</button>
-</div>
+<div id="message" class="info">請填寫表單資料</div>
 
 <script>
-// 修正：使用您提供的正確 ID
-const WEBAPP_URL = "https://script.google.com/macros/s/AKfycby03UhJUm5Lsd0LfqR9WSgn3M2FxtjGJL6LeQrgK-s0cX6sDnk-1FhFucDCz_ZkyzuYcg/exec";
+const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyn1rGnMaezs1QAJ5dVQFkDNnO-LxGR_PZjl5EZNqYFDhu_weB6hnGoSCxStS5ISVnKWQ/exec";
 
 // 醫院與對應單位
 const hospitals = {
@@ -79,6 +74,12 @@ const hospitals = {
   "醫院C": ["單位C1", "單位C2", "單位C3", "單位C4"],
   "醫院D": ["單位D1"]
 };
+
+function showMessage(message, type = 'info') {
+  const messageDiv = document.getElementById('message');
+  messageDiv.textContent = message;
+  messageDiv.className = type;
+}
 
 // 初始化醫院選單
 function populateHospitals() {
@@ -113,63 +114,64 @@ function updateUnits(hospitalId, unitId){
   }
 
   hospital.addEventListener('change', setOptions);
-  setOptions(); // 初始化
+  setOptions();
 }
 
-// 送出表單
-document.getElementById('volunteerForm').addEventListener('submit', async function(e){
+// 使用傳統表單提交 JSON 資料
+document.getElementById('volunteerForm').addEventListener('submit', function(e) {
   e.preventDefault();
+  
   const form = this;
   const submitBtn = form.querySelector('button[type="submit"]');
+  const data = Object.fromEntries(new FormData(form).entries());
   
-  // 防止重複提交
   submitBtn.disabled = true;
   submitBtn.textContent = '提交中...';
+  showMessage('資料提交中...', 'info');
   
-  const data = Object.fromEntries(new FormData(this).entries());
+  // 建立隱藏表單來提交 JSON
+  const hiddenForm = document.createElement('form');
+  hiddenForm.method = 'POST';
+  hiddenForm.action = WEBAPP_URL;
+  hiddenForm.target = 'hiddenFrame';
+  hiddenForm.style.display = 'none';
   
-  try{
-    const res = await fetch(WEBAPP_URL, {
-      method: "POST",
-      body: JSON.stringify(data),
-      headers: {"Content-Type":"application/json"}
-    });
-    const result = await res.json();
+  const dataInput = document.createElement('input');
+  dataInput.name = 'data';
+  dataInput.value = JSON.stringify(data);
+  hiddenForm.appendChild(dataInput);
+  
+  document.body.appendChild(hiddenForm);
+  
+  // 建立隱藏 iframe 來接收回應
+  const iframe = document.createElement('iframe');
+  iframe.name = 'hiddenFrame';
+  iframe.style.display = 'none';
+  document.body.appendChild(iframe);
+  
+  iframe.onload = function() {
+    // 提交完成後的處理
+    showMessage('✅ 表單提交成功！請檢查試算表。', 'success');
+    form.reset();
+    document.getElementById('unit1').innerHTML = '<option value="">請先選醫院</option>';
+    document.getElementById('unit2').innerHTML = '<option value="">請先選醫院</option>';
     
-    if(result.status === "success" || result.result === "success"){
-      document.getElementById('message').textContent = "資料送出成功！";
-      document.getElementById('message').style.color = "green";
-      form.reset();
-      // 重置單位選單
-      document.getElementById('unit1').innerHTML='<option value="">請先選醫院</option>';
-      document.getElementById('unit2').innerHTML='<option value="">請先選醫院</option>';
-    } else {
-      document.getElementById('message').textContent = "送出失敗：" + (result.message||"未知錯誤");
-      document.getElementById('message').style.color = "red";
-    }
-  } catch(err){
-    document.getElementById('message').textContent = "送出失敗：" + err.message;
-    document.getElementById('message').style.color = "red";
-    console.error("提交錯誤:", err);
-  } finally {
-    // 恢復按鈕狀態
     submitBtn.disabled = false;
     submitBtn.textContent = '送出表單';
-  }
-});
-
-// 工作人員下載
-document.getElementById('downloadBtn').addEventListener('click', function(){
-  const pwd = prompt("請輸入工作人員密碼：");
-  if(!pwd) return;
-  const url = WEBAPP_URL + "?password=" + encodeURIComponent(pwd) + "&action=download";
-  window.open(url,"_blank");
+    
+    // 清理
+    document.body.removeChild(hiddenForm);
+    document.body.removeChild(iframe);
+  };
+  
+  hiddenForm.submit();
 });
 
 // 初始化
 populateHospitals();
 updateUnits('hospital1','unit1');
 updateUnits('hospital2','unit2');
+showMessage('✅ 系統就緒，請填寫表單', 'success');
 </script>
 
 </body>
